--- a/analyse_results.ipynb
+++ b/analyse_results.ipynb
@@ -23,12 +23,12 @@
    "outputs": [],
    "source": [
     "#We may need this for more detailed analysis\n",
-    "#qa_graph = json.load(open('/home/vvjain3/new_repo/rag-llm-verify/wikidata_graphs/wikidata_util.json'))\n",
-    "# context_graph_edge = json.load(open('/home/vvjain3/new_repo/rag-llm-verify/wikidata_graphs/wikidata_text_edge.json'))\n",
-    "# graph_text_sentencized = json.load(open('/home/vvjain3/new_repo/rag-llm-verify/wikidata_graphs/wikidata_sentencized.json'))\n",
-    "#id2name = json.load(open('/home/vvjain3/new_repo/rag-llm-verify/wikidata_graphs/wikidata_name_id.json'))\n",
-    "# entity_aliases = load_aliases('/home/vvjain3/new_repo/rag-llm-verify/wikidata5m_entity.txt')\n",
-    "# relation_aliases = load_aliases('/home/vvjain3/new_repo/rag-llm-verify/wikidata5m_relation.txt')"
+    "#qa_graph = json.load(open('wikidata_graphs/wikidata_util.json'))\n",
+    "# context_graph_edge = json.load(open('wikidata_graphs/wikidata_text_edge.json'))\n",
+    "# graph_text_sentencized = json.load(open('wikidata_graphs/wikidata_sentencized.json'))\n",
+    "#id2name = json.load(open('wikidata_graphs/wikidata_name_id.json'))\n",
+    "# entity_aliases = load_aliases('wikidata5m_entity.txt')\n",
+    "# relation_aliases = load_aliases('wikidata5m_relation.txt')"
    ]
   },
   {
